--- a/src/Css/results-page.css
+++ b/src/Css/results-page.css
@@ -55,3 +55,39 @@
     color: rgb(19, 19, 18);
     font-size: 1rem;
 }
+
+.pagination{
+    display: flex;
+    width: 80vw;
+    height: 20vh;
+    background-color: rgb(10, 10, 10);
+    margin-bottom: -15vh;
+    justify-content: space-around;
+    align-items: center;
+}
+.page-num{
+    border: 0.2em;
+    color: antiquewhite;
+    font-size: 2em;
+    transition: 1s;
+    font-weight: 300;
+    cursor: pointer;
+}
+.page-num::after{
+    content:'';
+    
+    display: block;
+    height: 2px;
+    width: 20px;
+    left: -1vw;
+    transform: scale(0);
+    background:  rgb(180, 36, 36);
+    transition: transform 0.6s ease-in-out;
+}
+.page-num:hover::after{
+   transform: scale(1);
+
+}
+.page-num:hover{
+    color: aqua;
+}
