--- a/src/Css/results-page.css
+++ b/src/Css/results-page.css
@@ -22,7 +22,7 @@
     align-items: stretch;
     background-color: aqua;
     width: 80vw;
-    height: 80vh;
+    height: 81vh;
     list-style: none;
     margin-left: 10vw;
     margin-top: 10vh;
@@ -34,7 +34,6 @@
     justify-content: space-around;
     align-items: center;
     position: relative;
-    text-decoration: underline;
     margin-top: -8vh;
     padding: 1em;
 
@@ -45,15 +44,82 @@
     font-weight: 500;
     color: antiquewhite;
 }
+
+.table-1{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content:left;
+    flex-direction: column;
+    top:1vh;
+    left: 9vw;
+
+}
+.table-1::after{
+    content: '';
+    position: absolute;
+    width: 100vw;
+    height: 2px;
+    background-color: black;
+    transform: rotate(90deg);
+    left: -30vw;
+}
+
+.table-2{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content:left;
+    flex-direction: column;
+    top:1vh;
+    left: 39vw;
+
+}
+.table-2::after{
+    content: '';
+    position: absolute;
+    width: 100vw;
+    height: 2px;
+    background-color: black;
+    transform: rotate(90deg);
+    left: -27vw;
+}
+.table-3{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content:left;
+    flex-direction: column;
+    top:1vh;
+    left: 69vw;
+
+}
 .sub-table{
     display: flex;
-    justify-content: space-evenly;
-    align-items: stretch;
+    justify-content:flex-start;
+    align-items: center;
     list-style: none;
+   
 }
+.sub-table::after{
+    content: '';
+    position: absolute;
+    width: 100vw;
+    height: 2px;
+    background-color: black;
+    left:-10vw;
+    margin-top: -9px;
+
+}
+
+
+
 .result{
     color: rgb(19, 19, 18);
-    font-size: 1rem;
+    font-size: 0.9rem;
+    align-self: center;
+    justify-self: center;
+    margin-top: 8px;
 }
 
 .pagination{
