--- a/src/Css/results-page.css
+++ b/src/Css/results-page.css
@@ -1,7 +1,13 @@
 
 
-.loading-container{
-    position: relative;
+
+
+.results-container{
+    background-color: black;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
 }
 
 
@@ -34,15 +40,18 @@
     justify-content: space-around;
     align-items: center;
     position: relative;
-    margin-top: -8vh;
-    padding: 1em;
+    margin-top: -1vh;
+    padding: 0.5em;
+    
 
 
 }
 .title{
-    font-size: 3em;
-    font-weight: 500;
-    color: antiquewhite;
+    margin-left: 4vw;
+    font-size: 1.16em;
+    font-weight: 600;
+    color: rgb(7, 7, 7);
+    letter-spacing: 0.1vw;
 }
 
 .table-1{
