--- a/src/Css/search_page.css
+++ b/src/Css/search_page.css
@@ -1,8 +1,17 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: black;
+    background: #ddd;
+    background-size: 300%;
+    background-image: linear-gradient(120deg, black, blue, purple);
+    animation: bg-anime 23s infinite;
 }
+
+@keyframes bg-anime {
+    0% {background-position: left}
+    50% {background-position: right}
+    100% {background-position: left}
+  }
 
 .search-page{
     display: flex;
@@ -52,12 +61,12 @@ body{
 .search-text{
     color: rgb(228, 212, 190);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.2em;
 }
 .search-text-error{
     color: rgb(238, 57, 34);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.2em;
     font-weight: 300;
     margin-left: 2vw;
 }
